--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/themes/clix/clix2017.css
@@ -6103,3 +6103,43 @@ p {
 .button-bg {
   background-color: #74b3dc;
 }
+
+/* Tools page css listing*/
+/* line 6152, ../../../scss/_clix2017.scss */
+.polaroid {
+  width: 330px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px 10px 10px 10px;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+/*
+.polaroid:hover img {
+      -moz-transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1);
+}*/
+/* line 6174, ../../../scss/_clix2017.scss */
+.container {
+  text-align: center;
+  padding: 10px 20px;
+  border-top: 5px solid #164a7b;
+  margin-top: 0px;
+}
+/* line 6180, ../../../scss/_clix2017.scss */
+.container > p {
+  color: black;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+/* line 6189, ../../../scss/_clix2017.scss */
+.tool-bg {
+  background-color: rgba(87, 198, 250, 0.07);
+}
