--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -6145,3 +6145,47 @@ ul.nav_menu_1 {
 .button-bg{
     background-color: $secondry-blue;
 }
+
+
+/* Tools page css listing*/
+
+.polaroid {
+  width: 330px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
+  margin-top: 25px;
+  padding: 10px 10px 10px 10px;
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  cursor: pointer;
+
+ 
+
+}
+/*
+.polaroid:hover img {
+      -moz-transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      transform: scale(1.1);
+}*/
+
+.container {
+  text-align: center;
+  padding: 10px 20px;
+  border-top:5px solid #164a7b;
+  margin-top: 0px;
+
+  >p{
+    color: black;
+    font-size: 16px;
+    font-weight: 500;
+
+  }
+}
+
+
+.tool-bg{
+    background-color: rgba(87, 198, 250, 0.07);
+}
