sugar logo updated

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/tools_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/tools_list.html
@@ -23,7 +23,7 @@
         	<li>   
         		<div class="polaroid">
         			<a href="/sugar/" title="Sugar Labs" target="_blank">
-						<img src="/static/ndf/images/snap-logo.png" alt="Norway" style="width: 310px;
+						<img src="/static/ndf/images/sugar-xo-logo.svg" alt="Norway" style="width: 310px;
     height: 222px;
     border: 2px solid #164a7b;
     padding: 10px 10px 10px 10px;" />
