--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -6214,3 +6214,16 @@ ul.nav_menu_1 {
     color: #ffffff !important;
     border: 2px solid #4b4852;
 }
+
+
+.user-analytics-data{
+    margin: 42px 37px 37px 37px;
+    border: 2px solid #aaaaaa;
+    .close-reveal-modal{
+        font-size: 20px;
+    }
+}
+
+.left-space {
+    margin-left: 0.5em
+}
