--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -6215,7 +6215,6 @@ ul.nav_menu_1 {
     border: 2px solid #4b4852;
 }
 
-
 .user-analytics-data{
     margin: 42px 37px 37px 37px;
     border: 2px solid #aaaaaa;
@@ -6223,7 +6222,6 @@ ul.nav_menu_1 {
         font-size: 20px;
     }
 }
-
 .left-space {
-    margin-left: 0.5em
+    margin-left: 0.5em;
 }
