lbl set to display-inline with total points

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/user_course_analytics.html
@@ -23,7 +23,7 @@
     <h4 class="inner"> User:  <h3 class="inner left-space"> {{username}} </h3></h4>
   </div>
   <div class="small-6 columns">
-    <h4>Total points gained:  <h3 class="course-metric-count users_points inner left-space">{{users_points}}</h3></h4>
+    <h4 class="inner">Total points gained:  <h3 class="course-metric-count users_points inner left-space">{{users_points}}</h3></h4>
   </div>
 </div><hr/>
 <div class="course-overview-container">
