--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/horizontal_card.html
@@ -13,17 +13,14 @@
 <div class="module_card">
     <div class="card_banner">
         {% get_relation_value node.pk 'has_banner_pic' as grel_dict %}
-        <div class="medium-12 rows">
         {% if not grel_dict.cursor and grel_dict.grel_node and grel_dict.grel_node.if_file.thumbnail.relurl %}
-            <img class="card_photo_widget" src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.mid.relurl}}" alt="" />
+            <img  src="{{MEDIA_URL}}{{grel_dict.grel_node.if_file.mid.relurl}}" alt="" />
         {% else %}
-            <img class="card_photo_widget" src="/static/ndf/images/module-card.png"/></img>
-            
+            <img  src="/static/ndf/images/module-card.png"/></img>
         {% endif %}
-            <div class="medium-12 columns card_title_font" title="{% firstof node.altnames node.name %} ">
-                {% firstof node.altnames node.name %}
-            </div>
-        </div>
+            <h4 class="card_title" title="{% firstof node.altnames node.name %} ">
+                {% firstof node.altnames|truncatechars:60 node.name|truncatechars:60  %}
+            </h4>
     {% get_dict_from_list_of_dicts node.attribute_set as node_attrs %}
     </div>
     <div class="card_summary">
