--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4708,6 +4708,7 @@ $module-card-lines-to-show: 3;
                 -ms-transform: scale(1.03);
                 -o-transform: scale(1.03);
                 transform: scale(1.03);
+                opacity: 0.8;
 
             
             }
